--- a/index.html
+++ b/index.html
@@ -23,13 +23,25 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>To start, open the site you used in the last challenge and add some content into each div.
+                    Then, you need to figure out what colors you want to use in your design and what other elements you may need (like borders!) to make it look good.
+                    When you're done, push your files to the GitHub repo you set up for this class. If you need a refresher, refer to the Push Your Local Repo to GitHub step from the Git, GitHub, and the Command Line class!
+                    Want to check your code against ours? Download the finished code for this challenge right here.
+                    Copy the link to your repo and paste it below.</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p>To start, open the site you used in the last challenge and add some content into each div.
+                    Then, you need to figure out what colors you want to use in your design and what other elements you may need (like borders!) to make it look good.
+                    When you're done, push your files to the GitHub repo you set up for this class. If you need a refresher, refer to the Push Your Local Repo to GitHub step from the Git, GitHub, and the Command Line class!
+                    Want to check your code against ours? Download the finished code for this challenge right here.
+                    Copy the link to your repo and paste it below.</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>To start, open the site you used in the last challenge and add some content into each div.
+                    Then, you need to figure out what colors you want to use in your design and what other elements you may need (like borders!) to make it look good.
+                    When you're done, push your files to the GitHub repo you set up for this class. If you need a refresher, refer to the Push Your Local Repo to GitHub step from the Git, GitHub, and the Command Line class!
+                    Want to check your code against ours? Download the finished code for this challenge right here.
+                    Copy the link to your repo and paste it below.</p>
             </div>
         </section>    
 
