--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Roboto+Slab:400,500&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -22,27 +22,27 @@
         <![endif]-->
        
         <section class="wrapper">
+            <header>
+                <h1>Hi, I'm Kelsi</h1>
+            </header>
+            <main>
+                <p>I am a <span>Responsive Web Developer</span> who thrives on visual storytelling and the best user experience. 
+                    When I'm not working, pursuing side projects or getting lost in books, I can be found traveling, hiking with the dogs and 
+                    searching for new stories.</p>
+            </main>
             <div class="div-1">
-                <p>To start, open the site you used in the last challenge and add some content into each div.
-                    Then, you need to figure out what colors you want to use in your design and what other elements you may need (like borders!) to make it look good.
-                    When you're done, push your files to the GitHub repo you set up for this class. If you need a refresher, refer to the Push Your Local Repo to GitHub step from the Git, GitHub, and the Command Line class!
-                    Want to check your code against ours? Download the finished code for this challenge right here.
-                    Copy the link to your repo and paste it below.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="div-2">
-                <p>To start, open the site you used in the last challenge and add some content into each div.
-                    Then, you need to figure out what colors you want to use in your design and what other elements you may need (like borders!) to make it look good.
-                    When you're done, push your files to the GitHub repo you set up for this class. If you need a refresher, refer to the Push Your Local Repo to GitHub step from the Git, GitHub, and the Command Line class!
-                    Want to check your code against ours? Download the finished code for this challenge right here.
-                    Copy the link to your repo and paste it below.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="div-3">
-                <p>To start, open the site you used in the last challenge and add some content into each div.
-                    Then, you need to figure out what colors you want to use in your design and what other elements you may need (like borders!) to make it look good.
-                    When you're done, push your files to the GitHub repo you set up for this class. If you need a refresher, refer to the Push Your Local Repo to GitHub step from the Git, GitHub, and the Command Line class!
-                    Want to check your code against ours? Download the finished code for this challenge right here.
-                    Copy the link to your repo and paste it below.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
+            <footer>
+                <img src="img/icon-github.png">
+                <img src="img/icon-twitter.png">
+            </footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
